# revanced-unkind-helper

./: .gitignore  deploy.sh  poetry.toml  pyproject.toml  share-env.sh
.githooks/: pre-commit
config/: options.ddotty.json  options.ddotty.official.json  options.inotia00.json  options.json  options.sample.json  rv-helper.jobs.sample.json
src/: __init__.py  main.py
