[tool.poetry]
name = "rv-helper"
version = "0.1.0"
description = ""
authors = ["mdvtkr <mdvtkr@gmail.com>"]
readme = "README.md"
packages = [{include = "rv_helper"}]

[tool.poetry.dependencies]
python = ">3.8, <3.12"
seleniummm = {git = "https://github.com/mdvtkr/seleniummm.git"}
discord-webhook = "^1.3.0"
pyinstaller = "^5.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
